--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,21 +35,23 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/fonts/
+    - assets/login/icons/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Gotham Black
+      fonts:
+        - asset: assets/fonts/Gotham-Black.otf
+    - family: Gotham Medium
+      fonts:
+        - asset: assets/fonts/Gotham-Medium.otf
+    - family: Gotham Bold
+      fonts:
+        - asset: assets/fonts/Gotham-Bold.otf
+    - family: Gotham Light
+      fonts:
+        - asset: assets/fonts/Gotham-Light.otf
+    - family: LoginIcons
+      fonts:
+        - asset: assets/login/icons/LoginIcons.ttf
