--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   carousel_slider: ^5.0.0
   dots_indicator: ^3.0.0
+  custom_sliding_segmented_control: ^1.8.4
 
 dev_dependencies:
   flutter_test:
