--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   flutter_svg: ^2.0.10+1
+  modal_progress_hud_nsn: ^0.5.1
+  http: ^1.2.2
   carousel_slider: ^5.0.0
   dots_indicator: ^3.0.0
   animated_text_kit: ^4.2.2
