--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
 
   flutter_modular: ^6.3.4
 
-  intl: ^0.20.2
+  intl: ^0.19.0
+  open_file: ^3.5.10
   flutter_mobx: ^2.2.1+1
   mobx: ^2.3.3+2
   cupertino_icons: ^1.0.8
@@ -21,21 +22,20 @@ dependencies:
   file_picker: ^8.3.1
   permission_handler: ^11.3.1
   device_info_plus: ^11.3.0
-
-
+  path_provider: ^2.1.5
   flutter_svg: ^2.0.10+1
   flutter_secure_storage: ^9.2.4
   modal_progress_hud_nsn: ^0.5.1
   http: ^1.2.2
   carousel_slider: ^5.0.0
+  dartssh2: ^2.11.0
+
   dots_indicator: ^3.0.0
   animated_text_kit: ^4.2.2
   another_stepper: ^1.2.2
   custom_sliding_segmented_control: ^1.8.4
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   flutter_launcher_icons: 0.13.1
   flutter_lints: ^4.0.0
