etapa de negociação

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: marcenaria
 description: "A new Flutter project."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ^3.5.4
@@ -15,6 +15,7 @@ dependencies:
 
   intl: ^0.19.0
   open_file: ^3.5.10
+  flutter_pdfview: ^1.4.0
   flutter_mobx: ^2.2.1+1
   mobx: ^2.3.3+2
   cupertino_icons: ^1.0.8
@@ -59,6 +60,7 @@ flutter:
     - assets/fonts/
     - assets/login/icons/
     - assets/login/svgs/
+    - assets/login/pdf/
     - assets/login/images/
     - assets/home/icons/
     - assets/home/customer/
