admin, payment and more components

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/covers/
     - assets/onboarding/
     - assets/profile/
+    - assets/admin/navigation/
 
   fonts:
     - family: Gotham Black
