--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   file_picker: ^8.3.1
+  pin_code_fields: ^8.0.1
   permission_handler: ^11.3.1
   device_info_plus: ^11.3.0
   path_provider: ^2.1.5
