--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,10 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/icon.jpg"
+  image_path: "assets/icon/icon.png"
   remove_alpha_ios: true
+  adaptive_icon_background: "assets/icon/icon.png"
+  adaptive_icon_foreground: "assets/icon/icon.png"
 
 flutter:
 
