--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: marcenaria
 description: "A new Flutter project."
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.8+8
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
+version: 1.0.9+9
 
 environment:
   sdk: ^3.5.4
@@ -44,7 +44,6 @@ dependencies:
   firebase_messaging: ^15.2.4
 
 dev_dependencies:
-
   flutter_launcher_icons: 0.13.1
   flutter_lints: ^4.0.0
   mobx_codegen: ^2.6.1
@@ -60,7 +59,6 @@ flutter_launcher_icons:
   adaptive_icon_foreground: "assets/icon/icon.png"
 
 flutter:
-
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
